syntax = "proto3";

package chain_prover;

service ChainProver {
    rpc Chain (ChainRequest) returns (ChainResponse);
    rpc Config (ConfigRequest) returns (ConfigResponse);
}

message ChainRequest {
  bytes arg = 1;
}

message ChainResponse {
  bytes chain_data = 1;
  bytes proof = 2;
}

message ConfigRequest {}

message ConfigResponse {
  uint32 rc = 1;
}
